# actix-backend

./: .env  Cargo.toml  configuration.yml
.github/workflows/: general.yml
.trunk/: trunk.yaml
migrations/: 20220207083743_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  test_suite.rs
