[package]
name = "miso-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "miso-backend"

[dependencies]
actix-web = "=4.0.0-rc.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
chrono = "0.4.19"
names = { version = "0.12.0", default-features = false }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-actix-rustls", "macros", "mysql", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.11"
